[tool.poetry]
name = "bluesky-feeds"
version = "0.1.0"
description = ""
authors = ["Andrew Reifman-Packett <andrew@reifman.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
atproto = "^0.0.49"
peewee = ">=3.16.2,<3.17.0"
flask = ">=2.3.2,<2.4.0"
python-dotenv = ">=1.0.0,<1.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
